name:                crocker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/codebje/crocker#readme
license:             BSD3
license-file:        LICENSE
author:              Byron Ellacott
maintainer:          example@example.com
copyright:           Byron Ellacott
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Crocker
  hs-source-dirs:      src
  other-modules:       Reaper
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , cron
                     , process
                     , stm
                     , text
                     , time
                     , unix

executable crocker
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts=none -no-rtsopts-suggestions
  build-depends:       base >= 4.7 && < 5
                     , crocker

test-suite crocker-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  Main-is:              Tests.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts=none -no-rtsopts-suggestions
  build-depends:       base >= 4.7 && < 5
                      , crocker
                      , stm
                      , unix
                      , test-framework
                      , test-framework-hunit
                      , HUnit
